Added translation visitor